- Optimize singe chat screen design, group chat screen design and new chat screen design.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         tools:ignore="AllowBackup">
 
         <activity android:name=".NewChatActivity"/>
-        <activity android:name=".SingleChatDetailsActivity" />
+        <activity android:name=".ChatSingleActivity" />
         <activity android:name=".ChatGroupActivity"/>
 
         <activity android:name=".MainActivity">
